<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/saperator_height"
            android:background="@color/colorAccent"/>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_Id"
            android:text="@string/patient_id"
            android:textStyle="bold"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/card_margin"/>


        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_firstname"
                    android:inputType="textCapCharacters"
                    android:hint="@string/reg_fname_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:paddingTop="@dimen/space_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_lastname"
                    android:inputType="textCapCharacters"
                    android:hint="@string/reg_lname_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">


            <android.support.design.widget.TextInputLayout
                android:layout_gravity="center_vertical"
                android:layout_weight="1.1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_dob"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/reg_dob_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.9"/>

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/space_small"
                android:src="@drawable/ic_bloodgroup"/>
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/sp_bloodgroup"
                android:layout_weight="1.1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/BloodGroup"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/card_margin"
                android:text="@string/gender"
                android:textSize="@dimen/font_s"
                android:textAlignment="center"
                android:textStyle="bold" />


            <RadioGroup
                android:id="@+id/rg_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/space_large"
                    android:text="@string/male" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/space_large"
                    android:text="@string/female" />
            </RadioGroup>


        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:paddingTop="@dimen/space_small"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_mobile"
                android:inputType="number"
                android:hint="@string/reg_contact_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:paddingTop="@dimen/space_small"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_email"
                android:inputType="textEmailAddress"
                android:hint="@string/reg_email_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_address"
                android:inputType="textMultiLine"
                android:maxLines="4"
                android:minLines="2"
                android:hint="@string/reg_address_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_department"
                android:inputType="textPersonName"
                android:hint="@string/reg_department_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_doctor_name"
                android:inputType="textPersonName"
                android:hint="@string/reg_doctor_name_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</ScrollView>
